--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
+  "type": "module",
   "dependencies": {
+    "@azure/identity": "^4.13.0",
+    "axios": "^1.13.5",
     "cors": "^2.8.6",
-    "dotenv": "^17.2.4",
+    "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "jwks-rsa": "^3.2.2"
